Removed unnecessary files, added sorcer-lib (for external requestors)

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -17,6 +17,12 @@
         <!-- sos -->
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-lib</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-installer</artifactId>
             <version>${project.version}</version>
         </dependency>
