Created a simple java main requestor in ex0

--- a/examples/ex0/ex0-prv/pom.xml
+++ b/examples/ex0/ex0-prv/pom.xml
@@ -22,6 +22,11 @@
 		</dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sos-platform</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-junit</artifactId>
         </dependency>
         <dependency>
