Cleanup after removal of jobber and spacer

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -112,7 +112,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>jobber-cfg</artifactId>
+            <artifactId>rendezvous-cfg</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -133,16 +133,6 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>cataloger-sui</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>spacer-cfg</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>concatenator-cfg</artifactId>
             <version>${project.version}</version>
         </dependency>
 
