Added support for local subdirectory search in sorcer booter, fixes 32 bit linux identification

--- a/tools/sorcer-lib/pom.xml
+++ b/tools/sorcer-lib/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>sorcer-lib</artifactId>
 
+    <name>SORCER tools :: requestor library</name>
+
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
