--- a/configs/jini/configs/reggie.config
+++ b/configs/jini/configs/reggie.config
@@ -4,6 +4,7 @@ import net.jini.jeri.BasicJeriExporter;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.SorcerEnv;
+import sorcer.container.jeri.ExporterFactories;
 
 com.sun.jini.reggie {
     name = SorcerEnv.getActualName("Service Registry");
@@ -14,6 +15,10 @@ com.sun.jini.reggie {
     //initialUnicastDiscoveryPort
    
 //    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
-    serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+    //serverExporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(SorcerEnv.getHostAddress(), 0), new BasicILFactory());
+
+    serverExporter = ExporterFactories.getBasicTcp();
+
+    unicastDiscoveryHost = SorcerEnv.getHostAddress();
 
 }
