--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <!-- required for site -->
         <v_sorcer>${project.version}</v_sorcer>
         <!-- Remember not to change it to snapshot, always make it the latest release-->
-        <v_sos_release>1.0-M4</v_sos_release>
+        <v_sos_release>1.0</v_sos_release>
 		<v.jini>2.2.2</v.jini>
 		<v.blitz>2.3</v.blitz>
 		<v.sleepycat>5.0.104</v.sleepycat>
