Fixing support for network config on hosts with multiple ifaces

--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -2,15 +2,23 @@
 
 # The OS environment variable SORCER_HOME must be set
 
-# Local jar repository, in a development environment it should 
-# point to the local maven repository location
+# Code server configuration, if set to ${localhost} it will automatically
+# resolved to the first external interface
+provider.webster.interface=${localhost}
+#webster.interface=10.131.5.101
+provider.webster.port=9010
+#50001
+# Provider's listening interface - useful on machines with multiple
+# external interfaces
+#java.rmi.server.hostname=192.168.0.6
+
+# Local jar repository, it should point to the location of
+# the local maven repository
 sorcer.local.repo.location = ${user.home}/.m2/repository
-#sorcer.local.repo.location = ${user.home}/sorcer_repo
 
 # use provider names suffixed with the OS user name
 sorcer.provider.name.suffixed = true
 # custom suffix for provider names
-#sorcer.provider.name.suffix = DEV
 sorcer.provider.name.suffix = ${user.name}
 
 # Groups to register/lookup
@@ -40,12 +48,6 @@ provider.exert.monitor.name=Exert Monitor
 database.storer.name=Database Storage
 # Dataspace Storage provider
 dataspace.storer.name=Dataspace Storage
-
-# Code server configuration
-provider.webster.interface=${localhost}
-#webster.interface=10.131.5.101
-provider.webster.port=9010
-#50001
 
 # Data/file repository configuration
 # Scratch directory format: 
