--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <v_sos_release>1.0-M2</v_sos_release>
 		<v.jini>2.2.1</v.jini>
 		<v.blitz>2.2.0</v.blitz>
-		<v.sleepycat>4.1.21</v.sleepycat>
+		<v.sleepycat>5.0.104</v.sleepycat>
 		<v.rio>5.0-M4-sorcer3</v.rio>
 		<v.groovy>2.1.3</v.groovy>
 		<v.sigar>1.6.4</v.sigar>
@@ -450,8 +450,8 @@
 
 	<repositories>
 		<repository>
-			<id>hashnot</id>
-			<url>http://mvn.hashnot.com/content/groups/public</url>
+			<id>Sorcersoft.com</id>
+			<url>http://mvn.sorcersoft.com/content/groups/public</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
