--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -19,6 +19,7 @@ import sorcer.core.SorcerEnv;
 sorcer.tools.codeserver {
 
     home = "${sorcer.home}";
+    engHome = "${eng.home}";
 
     // for compatibility with old sorcer distro
     roots = WebsterStarter.getWebsterRoots(new String[] {
@@ -31,7 +32,8 @@ sorcer.tools.codeserver {
 		home + "${/}lib${/}jini-lookup",
 		home + "${/}lib${/}river",
 		home + "${/}lib${/}commons",
-		home + "${/}data"
+		home + "${/}data",
+		engHome + "${/}data"
     });
 
     websterPort = SorcerEnv.getWebsterPort();
