--- a/configs/webster/configs/webster-prv.config
+++ b/configs/webster/configs/webster-prv.config
@@ -19,7 +19,6 @@ import sorcer.core.SorcerEnv;
 sorcer.tools.codeserver {
 
     home = "${sorcer.home}";
-    engHome = "${eng.home}";
 
     // for compatibility with old sorcer distro
     roots = WebsterStarter.getWebsterRoots(new String[] {
@@ -32,8 +31,8 @@ sorcer.tools.codeserver {
 		home + "${/}lib${/}jini-lookup",
 		home + "${/}lib${/}river",
 		home + "${/}lib${/}commons",
-		home + "${/}data",
-		engHome + "${/}data"
+		//home + "${/}data",
+		SorcerEnv.getDataDirPath()
     });
 
     websterPort = SorcerEnv.getWebsterPort();
