--- a/examples/ex0/ex0-req/pom.xml
+++ b/examples/ex0/ex0-req/pom.xml
@@ -47,5 +47,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
