--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -152,7 +152,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-                        <RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME>
+                        <!-- <RIO_HOME>${env.SORCER_HOME}/target/rio</RIO_HOME> -->
                         <sorcer.home>${env.SORCER_HOME}</sorcer.home>
                     </systemPropertyVariables>
                 </configuration>
