--- a/sos/sos-api/pom.xml
+++ b/sos/sos-api/pom.xml
@@ -28,5 +28,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${v.slf4j}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
