extract SorcerResolvingLoader to a module sorcer-loader

--- a/sorcer-rio/sorcer-rio-resolver/pom.xml
+++ b/sorcer-rio/sorcer-rio-resolver/pom.xml
@@ -36,9 +36,13 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-boot</artifactId>
+            <artifactId>sos-util</artifactId>
             <version>${v.sorcer}</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+            <version>${v.sorcer}</version>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
