--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -25,5 +25,7 @@
         <module>exertlet</module>
         <module>default-codebase</module>
         <module>platform/sorcer-boot-rio</module>
+        <module>sorcer-loader</module>
+        <module>platform/sorcer-boot-resolver</module>
     </modules>
 </project>
