--- a/tools/provider-root/pom.xml
+++ b/tools/provider-root/pom.xml
@@ -55,6 +55,21 @@
                 <version>${v.sorcer}</version>
             </dependency>
             <dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>sos-platform</artifactId>
+                <version>${v.sorcer}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>sorcer-api</artifactId>
+                <version>${v.sorcer}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>sorcer-lib</artifactId>
+                <version>${v.sorcer}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${v.slf4j}</version>
@@ -109,13 +124,21 @@
     <build>
         <pluginManagement>
             <plugins>
-<!--
                 <plugin>
-                    <groupId>org.sorcersoft.sorcer</groupId>
-                    <artifactId>sorcer-maven-plugin</artifactId>
-                    <version>${project.version}</version>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <groups>${surefire.includedGroups}</groups>
+                        <excludedGroups>${surefire.excludedGroups}</excludedGroups>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.sorcersoft.sorcer</groupId>
+                            <artifactId>sorcer-junit</artifactId>
+                            <version>${project.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
--->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
@@ -174,4 +197,15 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <profiles>
+        <profile>
+            <id>run-its</id>
+            <properties>
+                <run-its>true</run-its>
+                <surefire.excludedGroups/>
+                <surefire.includedGroups>sorcer.junit.SorcerClient</surefire.includedGroups>
+            </properties>
+        </profile>
+    </profiles>
 </project>
