Fixing POJO requestors, switched back to Sorcer Webster, Rio doesn't run as deamon.

--- a/sorcer-rio/sorcer-rio-resolver/pom.xml
+++ b/sorcer-rio/sorcer-rio-resolver/pom.xml
@@ -43,6 +43,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
             <version>${v.sorcer}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
