Separted SorcerResolvingLoader from sorcer-api

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>sorcer-lib</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-resolving-loader</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
