Added getMinReqCp to common-run disabled trace logging in sorcer-loader

--- a/sos/sorcer-loader/src/main/resources/simplelogger.properties
+++ b/sos/sorcer-loader/src/main/resources/simplelogger.properties
@@ -1,4 +1,4 @@
-org.slf4j.simpleLogger.logFile=simple.log
+#org.slf4j.simpleLogger.logFile=simple.log
 org.slf4j.simpleLogger.defaultLogLevel=info
-org.slf4j.simpleLogger.log.sorcer=debug
-org.slf4j.simpleLogger.log.sorcer.rio.rmi.SorcerResolvingLoader=trace
+org.slf4j.simpleLogger.log.sorcer=info
+org.slf4j.simpleLogger.log.sorcer.rio.rmi.SorcerResolvingLoader=info
