--- a/configs/sorcer.env
+++ b/configs/sorcer.env
@@ -53,7 +53,7 @@ dataspace.storer.name=Dataspace Storage
 # Scratch directory format: 
 # ${data.root.dir}/${provider.data.dir}/${provider.scratch.dir}
 scratch.dir=scratch
-# Default is to use ENG_HOME/data if ENG_HOME is set,
+# Default is to use MSTC_HOME/data if MSTC_HOME is set,
 # otherwise use SORCER_HOME/data
 #data.root.dir=${sorcer.home}/data
 #provider.data.dir=provider
