--- a/sorcer-rio/sorcer-rio-start/pom.xml
+++ b/sorcer-rio/sorcer-rio-start/pom.xml
@@ -40,8 +40,8 @@
             <version>${v.rio}</version>
         </dependency>
         <dependency>
-            <groupId>org.rioproject.resolver</groupId>
-            <artifactId>resolver-api</artifactId>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-platform</artifactId>
             <version>${v.rio}</version>
         </dependency>
 <!--
