--- a/configs/versions.properties
+++ b/configs/versions.properties
@@ -1,8 +1,8 @@
 v.jini=2.2.2
 v.blitz=2.3
-v.rio=5.0-M4-S8
+v.rio=5.0-M5S0
 v.sleepycat=5.0.104
-v.groovy=2.2.1
+v.groovy=2.3.8
 v.sorcer=1.1-SNAPSHOT
 v.plexus=3.0.15
 v.slf4j=1.7.5
