--- a/sos/sorcer-spi/pom.xml
+++ b/sos/sorcer-spi/pom.xml
@@ -32,8 +32,8 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.rioproject.resolver</groupId>
-            <artifactId>resolver-api</artifactId>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio-platform</artifactId>
             <version>${v.rio}</version>
         </dependency>
         <dependency>
